# flows

./: CMakeLists.txt  README.md
include/flows/flow/: alternative.hh  arrow.hh  category.hh  contramap.hh  filter.hh  map.hh  monad.hh  tee.hh
include/flows/sink/: iterator.hh
include/flows/utils/: macros.hh  static-fold.hh  traits.hh
test/: CMakeLists.txt
test/flow/: CMakeLists.txt  test-arrow.cc  test-monad.cc
test/utils/: CMakeLists.txt  test-traits.cc
